src/list/list.css
/*
 *  Created by Martin Giger
 *  Licensed under the MPL 2.0
 */
:root {
    --trim: 0.3rem;
    --big-avatar: 30px;
    --small-avatar: 1em;
    --avatar-size: var(--big-avatar);
    --topbar-height: 2.2em;
}

body {
    background-color: var(--inverted-bg);
}

@media (-moz-touch-enabled: 0), (pointer: fine) {
    body {
        font-size: 12px;
        max-width: 400px;
    }
}

/* This ensures no horizontal overflow. */
#root,
main,
html,
body,
:root {
    min-width: -moz-fit-content;
}

section > div {
    padding: 0.2em 0;
}

ul {
    margin: 0;
    padding: 0;
}

a {
    margin: 0;
}

nav {
    z-index: 10;
    min-width: -moz-max-content;
}

.topbar a,
.topbar button {
    padding: 0.5em;
    height: var(--topbar-height);
}

.searchField,
.exploreprovider {
    width: 100%;
    max-height: var(--topbar-height);
}

.searchField {
    display: block;
}

.browser-style {
    margin-bottom: 0 !important;
}

.scrollable {
    max-height: calc(600px - 3 * var(--topbar-height));
    overflow-y: auto;
}

.flexSelect {
    display: flex;
}

.flexSelect select {
    flex-grow: 1;
}

.flexSelect button {
    flex-grow: 0;
}

/* Context panel */
.context-panel {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background: var(--inverted-bg);
    color: var(--inverted-text);
    border: none;
    width: 100%;
    height: 100%;
    z-index: 11;
    font-size: 1rem;
    padding: 0;
    overflow-y: auto;
    overflow-x: hidden;
}

.context-panel button {
    appearance: none;
    background: var(--inverted-bg);
    color: var(--inverted-text);
    border: none;
}

.context-panel header {
    position: sticky;
    top: 0;
    width: 100%;
    background: var(--inverted-bg);
    z-index: 1;
}

.context-panel header button,
.context-panel header h1 {
    display: inline-block;
    font-size: 2em;
    font-weight: normal;
}

.context-panel header button {
    margin-right: 0.5em;
}

.context-panel .details {
    margin: 0 1em 0.5em;
    line-height: 1.2;
}

.context-panel .details h2 {
    display: inline-block;
    font-size: 1.5em;
    font-weight: normal;
}

.context-panel ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    width: 100%;
}

.context-panel ul li {
    display: block;
    width: 100%;
    padding: 0;
    margin: 0;
}

.context-panel ul button {
    display: block;
    padding: 0.5em 1em;
    width: 100%;
    text-align: left;
}

.context-panel button:hover,
.context-panel button:active,
.context-panel button:focus {
    background: var(--accent-light-bg);
    color: var(--accent-light-text);
}

/* Tab content */

.tabcontent {
    padding: 0;
    margin: 0;
    background-color: var(--inverted-bg);
    color: var(--inverted-text);
}

.tabcontent > ul > li {
    padding: 0;
    margin: 0;
    list-style: none;
    cursor: context-menu;
    display: block;
}

.tabcontent > ul > li > div,
.tabcontent > span {
    padding: var(--trim);
}

.compact {
    --avatar-size: var(--small-avatar);
}

.tabcontent > ul > li > div {
    min-height: var(--avatar-size);
    box-sizing: content-box;
}

.tabcontent > ul > li > img {
    width: 100%;
    display: block;
}

.tabcontent > ul > li div img {
    margin-right: var(--trim);
    float: left;
    width: var(--avatar-size);
    height: var(--avatar-size);
    vertical-align: middle;
}

.tabcontent > ul > li div.compact img {
    vertical-align: text-bottom;
}

.tabcontent.type0 .nonlive div > img,
.tabcontent:not(.type3) .external div > img {
    filter: grayscale(100%);
}

.tabcontent > ul > li.thumbnail {
    position: relative;
    width: 100%;
}

.tabcontent > ul > li.thumbnail > div {
    position: absolute;
    width: 100%;
    bottom: 0;
}

.align-right {
    margin-left: calc(var(--avatar-size) + var(--trim));
}

.tabcontent aside {
    display: block !important;
    visibility: visible;
    opacity: 0.7;
}

.tabcontent aside li:not(:last-child) {
    padding-right: var(--trim);
}

.icon {
    display: inline-block;
    height: 0.9em;
    width: 0.9em;
    margin-right: 0.1em;
    fill: currentColor;
}

.redirecting .redirectors {
    display: inline-block;
}

.tabcontent .redirecting .redirectors li {
    height: 1em;
    width: 1em;
    margin: 0;
    vertical-align: baseline;
    padding: 0 0.1em;
    min-height: 1em;
    display: inline-block;
}

.tabcontent .redirecting .redirectors li:first-child {
    padding-left: 0;
}

.tabcontent .redirecting .redirectors li > img {
    height: var(--small-avatar);
    width: var(--small-avatar);
    filter: none;
    vertical-align: baseline;
}

.title,
.categoryWrapper {
    hyphens: auto;
}

.badge {
    font-size: 0.75em;
    padding: 0.1em 0.6em;
    margin-left: 0.2em;
    border-radius: 1em;
    color: var(--inverted-text);
    background-color: var(--inverted-bg);
    display: inline-block;
    margin-top: -0.2em;
    vertical-align: middle;
}

.tabcontent > ul > li.subheading {
    padding: var(--trim);
    position: sticky;
    top: 0;
    background-color: var(--inverted-bg);
    display: block;
    border-bottom: 1px solid var(--accent-dark-bg);
    z-index: 2;
}

.context-panel .details > figure {
    width: calc(100% + 2em);
    margin: 0 -1em;
    position: relative;
}

.context-panel .details > figure > .back {
    width: 100%;
}

.context-panel .details > figure > img:not(.back) {
    position: absolute;
    bottom: 1em;
    left: 1em;
}

/* Type specific styles */
/* stylelint-disable no-descending-specificity, no-duplicate-selectors */

.tabcontent > ul > li {
    --channel-text-color: var(--inverted-text);
    --channel-bg-color-r: 255;
    --channel-bg-color-g: 255;
    --channel-bg-color-b: 255;
}

.thumbnail > div {
    background-color: rgba(var(--channel-bg-color-r), var(--channel-bg-color-g), var(--channel-bg-color-b), 0.7);
    color: var(--channel-text-color);
    transition: 0.2s 0.01s background-color;
}

.tabcontent > ul > li:hover:not(.subheading),
.thumbnail:hover > div {
    background-color: rgb(var(--channel-bg-color-r), var(--channel-bg-color-g), var(--channel-bg-color-b)) !important;
    color: var(--channel-text-color) !important;
}

.tabcontent > ul > .twitch {
    --channel-bg-color-r: 117;
    --channel-bg-color-g: 80;
    --channel-bg-color-b: 186;
    --channel-text-color: white;
}

.tabcontent > ul > .hitbox {
    --channel-bg-color-r: 255;
    --channel-bg-color-g: 255;
    --channel-bg-color-b: 255;
    --channel-text-color: #133c65;
}

.tabcontent > ul > .ustream {
    --channel-text-color: #303030;
    --channel-bg-color-r: 250;
    --channel-bg-color-g: 250;
    --channel-bg-color-b: 250;
}

.tabcontent > ul > .ustream:hover,
.thumbnail.ustream:hover > div {
    background:
        linear-gradient(
            to bottom,
            white 80%,
            #fafafa 100%
        ) !important;
}

.tabcontent > ul > .youtube {
    --channel-bg-color-r: 204;
    --channel-bg-color-g: 24;
    --channel-bg-color-b: 30;
    --channel-text-color: white;
}

.tabcontent > ul > .youtube:hover,
.thumbnail.youtube:hover > div {
    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.25);
}

.tabcontent > ul > .livestream {
    --channel-text-color: white;
    --channel-bg-color-r: 59;
    --channel-bg-color-g: 59;
    --channel-bg-color-b: 59;
}

.thumbnail.livestream > div {
    background:
        linear-gradient(
            to bottom,
            rgba(59, 59, 59, 0.7) 0%,
            rgba(56, 56, 56, 0.7) 16%,
            rgba(30, 30, 30, 0.7) 80%,
            rgba(25, 25, 25, 0.7) 98%,
            rgba(0, 0, 0, 0.7) 100%
        );
}

.tabcontent > ul > .livestream:hover,
.thumbnail.livestream:hover > div {
    background:
        linear-gradient(
            to bottom,
            rgb(59, 59, 59) 0%,
            rgb(56, 56, 56) 16%,
            rgb(30, 30, 30) 80%,
            rgb(25, 25, 25) 98%,
            black 100%
        ) !important;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
}

.tabcontent > ul > .mlg {
    --channel-bg-color-r: 60;
    --channel-bg-color-g: 125;
    --channel-bg-color-b: 230;
    --channel-text-color: white;
}

.tabcontent > ul > .beam {
    --channel-bg-color-r: 17;
    --channel-bg-color-g: 19;
    --channel-bg-color-b: 27;
    --channel-text-color: white;
}

.tabcontent > ul > .picarto {
    --channel-bg-color-r: 37;
    --channel-bg-color-g: 49;
    --channel-bg-color-b: 63;
    --channel-text-color: white;
}

.tabcontent > ul > .newlivestream {
    --channel-text-color: #cf202e;
}

.tabcontent > ul > .streamup {
    --channel-text-color: rgb(85, 98, 255);
}

.tabcontent > ul > .douyutv {
    --channel-bg-color-r: 255;
    --channel-bg-color-g: 119;
    --channel-bg-color-b: 0;
    --channel-text-color: white;
}

.tabcontent > ul > .dailymotion {
    --channel-bg-color-r: 0;
    --channel-bg-color-g: 102;
    --channel-bg-color-b: 220;
    --channel-text-color: white;
}

/* stylelint-enable */

